// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#1dbeee",
      "borderRadius": 24,
      "display": "flex",
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fcfcfc",
        "fontSize": 16,
        "lineHeight": 16,
      }
    }
  >
    Button
  </Text>
</View>
`;

exports[`Button renders correctly 2`] = `
<View
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#d9dbdf",
      "borderRadius": 24,
      "borderWidth": 0,
      "display": "flex",
      "height": 48,
      "justifyContent": "center",
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#fcfcfc",
        "fontSize": 16,
        "lineHeight": 16,
      }
    }
  >
    Button
  </Text>
</View>
`;

exports[`Button renders correctly 3`] = `
<View
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#1dbeee",
      "borderRadius": 24,
      "display": "flex",
      "height": 48,
      "justifyContent": "center",
      "paddingHorizontal": 16,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#fcfcfc"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`Button renders correctly 4`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1dbeee",
      "borderRadius": 24,
      "borderWidth": 1.2,
      "display": "flex",
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "paddingHorizontal": 16,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#1dbeee",
        "fontSize": 16,
        "fontWeight": "500",
        "lineHeight": 16,
      }
    }
  >
    Button
  </Text>
</View>
`;
